# analyze-song-by-bert

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/: data.csv
