[tool.poetry]
name = "work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "~3.6.1"
ipywidgets = "8.0.4"
umap-learn = "~0.5.3"
japanize-matplotlib = "~1.1.3"
seaborn = "~0.12.2"
plotly = "~5.14.1"
fugashi = "~1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
